--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FinanceDashboard.styles.css" asp-append-version="true" />
+     <link rel="stylesheet" href="~/dashboardFiles/css/site.css" />
 </head>
 <body>
     <header>
